--- a/ArraysAndObjects/index.html
+++ b/ArraysAndObjects/index.html
@@ -6,6 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="08.js"></script>
+    <!-- <script src="08.js"></script> -->
+    <!-- <script src="09.js"></script> -->
+    <script src="10.js"></script>
 </body>
 </html>
