--- a/ArraysAndObjects/index.html
+++ b/ArraysAndObjects/index.html
@@ -8,6 +8,7 @@
 <body>
     <!-- <script src="08.js"></script> -->
     <!-- <script src="09.js"></script> -->
-    <script src="10.js"></script>
+    <!-- <script src="10.js"></script> -->
+    <script src="11.js"></script>
 </body>
 </html>
