--- a/ArraysAndObjects/index.html
+++ b/ArraysAndObjects/index.html
@@ -13,6 +13,8 @@
     <!-- <script src="12.js"></script> -->
     <!-- <script src="13.js"></script> -->
     <!-- <script src="14.js"></script> -->
-    <script src="15.js"></script>
+    <!-- <script src="15.js"></script> -->
+    <!-- <script src="16.js"></script> -->
+    <script src="17.js"></script>
 </body>
 </html>
