--- a/functions/index.html
+++ b/functions/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="20.js"></script>
+    <!-- <script src="20.js"></script> -->
+    <script src="21.js"></script>
 </body>
 </html>
