--- a/functions/index.html
+++ b/functions/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <!-- <script src="20.js"></script> -->
-    <script src="21.js"></script>
+    <!-- <script src="21.js"></script> -->
+    <script src="22.js"></script>
 </body>
 </html>
