--- a/functions/index.html
+++ b/functions/index.html
@@ -8,6 +8,7 @@
 <body>
     <!-- <script src="20.js"></script> -->
     <!-- <script src="21.js"></script> -->
-    <script src="22.js"></script>
+    <!-- <script src="22.js"></script> -->
+    <script src="23.js"></script>
 </body>
 </html>
