--- a/MostImportantArrayMethods/index.html
+++ b/MostImportantArrayMethods/index.html
@@ -6,6 +6,10 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="28.js"></script>
+    <!-- <script src="28.js"></script> -->
+    <!-- <script src="29.js"></script> -->
+    <!-- <script src="30.js"></script> -->
+    <!-- <script src="31.js"></script> -->
+    <script src="32.js"></script>
 </body>
 </html>
