--- a/OOP/index.html
+++ b/OOP/index.html
@@ -14,7 +14,8 @@
     <!-- <script src="49.js"></script> -->
     <!-- <script src="50.js"></script> -->
     <!-- <script src="51.js"></script> -->
-    <script src="52.js"></script>
+    <!-- <script src="52.js"></script> -->
+    <script src="53.js"></script>
 </body>
 
 </html>
