--- a/OOP/index.html
+++ b/OOP/index.html
@@ -21,7 +21,12 @@
     <!-- <script src="56.js"></script> -->
     <!-- <script src="57.js"></script> -->
     <!-- <script src="58.js"></script> -->
-    <script src="59.js"></script>
+    <!-- <script src="59.js"></script> -->
+    <!-- <script src="60.js"></script> -->
+    <!-- <script src="61.js"></script> -->
+    <!-- <script src="62.js"></script> -->
+    <!-- <script src="63.js"></script> -->
+    <script src="64.js"></script>
 </body>
 
 </html>
