--- a/HowJavaScriptWorks/index.html
+++ b/HowJavaScriptWorks/index.html
@@ -7,6 +7,9 @@
 </head>
 <body>
     <!-- <script src="hjw_1.js"></script> -->
-    <script src="hjw_2.js"></script>
+    <!-- <script src="hjw_2.js"></script> -->
+    <!-- <script src="hjw_3.js"></script> -->
+    <!-- <script src="hjw_4.js"></script> -->
+    <script src="hjw_5.js"></script>
 </body>
 </html>
