--- a/HowJavaScriptWorks/index.html
+++ b/HowJavaScriptWorks/index.html
@@ -10,6 +10,7 @@
     <!-- <script src="hjw_2.js"></script> -->
     <!-- <script src="hjw_3.js"></script> -->
     <!-- <script src="hjw_4.js"></script> -->
-    <script src="hjw_5.js"></script>
+    <!-- <script src="hjw_5.js"></script> -->
+    <script src="hjw_6.js"></script>
 </body>
 </html>
