--- a/HowJavaScriptWorks/index.html
+++ b/HowJavaScriptWorks/index.html
@@ -12,6 +12,7 @@
     <!-- <script src="hjw_4.js"></script> -->
     <!-- <script src="hjw_5.js"></script> -->
     <!-- <script src="hjw_6.js"></script> -->
-    <script src="hjw_7.js"></script>
+    <!-- <script src="hjw_7.js"></script> -->
+    <script src="hjw_8.js"></script>
 </body>
 </html>
